--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-  "targetChannels": ["k0smos95", "kykla66", "chakralounge", "retrydp"],
+  "targetChannels": ["retrydp", "k0smos95", "kykla66", "chakralounge"],
   "watchedUsers": [
     "byme69",
     "blackgeneralgenagenerator",
