--- a/settings.json
+++ b/settings.json
@@ -2,5 +2,6 @@
   "targetChannels": ["retrydp", "k0smos95", "kykla66", "chakralounge"],
   "permittedUsers": ["retrydp", "k0smos95"],
   "twitchUsername": "",
-  "twitchToken": ""
+  "twitchToken": "",
+  "modules": ["hsbg"]
 }
